Fix T38083: submenu arrow is overlayed by menu hotkey